Add pagination support, plus addition metrics on rate limits