@@ -1,29 +1,30 @@
 package com.example.scorer.service;
 
-import com.example.scorer.api.GithubApiClient;
 import com.example.scorer.config.GithubApiProperties;
 import com.example.scorer.model.Pagination;
+import com.example.scorer.model.RepositoryDto;
 import com.example.scorer.model.ScoreResult;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.IntStream;
 
 @Service
 @Slf4j
 public class GithubSearchService {
 
-    private final GithubApiClient githubApiClient;
+    private final AsyncGithubRepositoryFetcher asyncFetcher;
     private final ScoringService scoringService;
     private final GithubApiProperties githubApiProperties;
 
     public GithubSearchService(
-            GithubApiClient githubApiClient,
+            AsyncGithubRepositoryFetcher asyncFetcher,
             ScoringService scoringService,
             GithubApiProperties githubApiProperties
     ) {
-        this.githubApiClient = githubApiClient;
+        this.asyncFetcher = asyncFetcher;
         this.scoringService = scoringService;
         this.githubApiProperties = githubApiProperties;
     }
@@ -42,15 +43,30 @@ public class GithubSearchService {
     private List<ScoreResult> getScoreResults(String createdAfter, String language, Pagination pagination) {
         log.info("Fetching and scoring repositories created after '{}' with language '{}', page size '{}' and max pages '{}'", createdAfter, language, pagination.getPageSize(), pagination.getMaxPages());
 
-        var repositories = githubApiClient.searchRepositories(createdAfter, language, pagination);
+        List<CompletableFuture<List<RepositoryDto>>> futures = IntStream.rangeClosed(1, pagination.getMaxPages())
+                .mapToObj(page -> asyncFetcher.fetchPage(createdAfter, language, page, pagination.getPageSize()))
+                .toList();
 
-        return repositories.parallelStream()
+        List<RepositoryDto> allRepos = futures.stream()
+                .map(future -> {
+                    try {
+                        List<RepositoryDto> result = future.join();
+                        return result != null ? result : List.<RepositoryDto>of();
+                    } catch (Exception e) {
+                        log.warn("Failed to fetch GitHub repositories asynchronously", e);
+                        return List.<RepositoryDto>of();
+                    }
+                })
+                .flatMap(List::stream)
+                .toList();
+
+        return allRepos.parallelStream()
                 .map(repo -> new ScoreResult(
                         repo.getName(),
                         repo.getStars(),
                         repo.getForks(),
                         repo.getUpdatedAt(),
                         scoringService.calculateScore(repo)))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
